[tool.poetry]
name = "lighthouse"
version = "0.1.0"
description = ""
authors = ["Lighthouse collarborators"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
numpydoc = "^1.6.0"
pydata-sphinx-theme = "^0.14.4"
sphinx-gallery = "^0.15.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
isort = "^5.12.0"
matplotlib = "^3.8.0"
pynwb = "^2.5.0"
holoviews = "^1.18.1"
pylint = "^3.0.2"
scikit-learn = "^1.4.0"
plotly = "^5.18.0"
mne = "^1.6.1"
pyxdf = "^1.16.5"
ipywidgets = "^8.1.2"
mlflow = "^2.12.1"
tensorboard = "^2.16.2"
loguru = "^0.7.2"
ipykernel = "^6.29.4"
neo = "^0.13.1"
imageio = "^2.35.1"

[tool.poetry.group.formatting]
optional = false

[tool.poetry.group.formatting.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}

[tool.isort]
profile = "black"

[tool.black]
include = '(?:lighthouse|notebooks)\/.*\.(py|ipynb)?$'
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
